<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidDatabaseApp</string>
    <string name="action_settings">Settings</string>
    <string name="Books">Books</string>
    <string name="add">+</string>
    <string name="Book">Book</string>
    <string name="save">Save</string>
    <string name="Addbook">Add Book</string>
    <string name="type">Type</string>
     <string name="Edit">Edit</string>
      <string name="Delete">Delete</string>
       <string name="editbook">Edit Book</string>
        <string name="Task">Task</string>
         <string name="Type">Type</string>
      
</resources>
