<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CCCCCC"
    android:paddingTop="1dp">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:background="#000000"
    android:padding="5dp"
    android:text="@string/editbook"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textColor="#FFFFFF"/>
   <RelativeLayout
     android:layout_width="match_parent"
    android:layout_height="match_parent"       
      android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="10dp">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" 
        android:layout_marginLeft="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/Task"/>
    <EditText
         android:id="@+id/bookName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView2"
         android:hint="@string/Type"
         android:ems="10">
        <requestFocus/>
    </EditText>
    <Button
        android:id="@+id/button1"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bookName1"
         android:layout_below="@+id/bookName1"
         android:layout_marginTop="19dp"
         android:onClick="editBook"
         android:text="@string/Edit"/>
      <Button
          android:id="@+id/button2"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true" 
        android:onClick="removeBook"
        android:text="@string/Delete"/>
      </RelativeLayout>
      </LinearLayout>