<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#CCCCCC"
    android:paddingTop="1dp">
    <TextView
        android:id="@+id/textView1"
          android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:padding="5dp"
    android:text="@string/Addbook"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textColor="#FFFFFF"/>
    <RelativeLayout
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="10dp">
    <TextView
         android:id="@+id/textView2"
          android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true" 
    android:layout_alignParentTop="true"
    android:layout_marginLeft="24dp"
    android:layout_marginTop="30dp"
     android:text="@string/Book"/>  
     <EditText
         android:id="@+id/bookName1"
          android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView2"
    android:layout_below="@+id/textView2"
    android:ems="10"
    android:hint="@string/type">
         <requestFocus />
     </EditText>
     <Button
         android:id="@+id/btnadd"
          android:layout_width="wrap_content"
    android:layout_height="wrap_content"
     android:layout_alignLeft="@+id/bookName1"
     android:layout_below="@+id/bookName1"
     android:layout_marginTop="32dp"
     android:onClick="addNewBook"
     android:text="@string/save">
     </Button>
     </RelativeLayout>
     </LinearLayout>